--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,12 +108,14 @@ dependencies {
 
     // Lifecycle
     def lifecycle_version = "2.4.0"
-    //noinspection GradleDependency
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    //noinspection GradleDependency
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
     // SwipeFresh
     implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")
+
+    // Kotlin coroutines
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0-RC")
+
 
 }
