--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,8 +108,11 @@ dependencies {
 
     // Lifecycle
     def lifecycle_version = "2.4.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
+    // Lifecycles only (without ViewModel or LiveData)
+    implementation ("androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version")
+    // ViewModel
+    implementation ("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
 
     // SwipeFresh
     implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")
